--- a/记忆修复计划.html
+++ b/记忆修复计划.html
@@ -334,7 +334,7 @@ window.addEventListener('keydown', function(e) {
 * BingAI，它帮我修改了一些情节。
 * ChatGPT，它帮助我修改了很多外观，使故事不是那么生涩简陋。
 * 我的母亲，她是这个故事的第一位读者。
-* 耄耋之力，他为这个故事提出了建议。
+* 灏哲，他为这个故事提出了建议。
 
 
 [[返回-&gt;开始页]]
